--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,23 +3,23 @@
     justify-content: space-between;
     align-items: center;
 
-    box-shadow: 0px 0px 48px -18px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 45px -15px rgba(0, 0, 0, 0.1);
 }
 
-.header-logo a {
+.header-logo .logo-link {
     text-decoration: none;
     color: black;
 }
 
-.header-controls .main-nav {
+.header-nav {
     display: flex;
 }
 
-.header-controls .main-nav .nav-item:not(:last-child) {
+.header-nav a:not(:last-child) {
     padding-right: 1rem;
 }
 
-.header-controls .main-nav .nav-item a {
+.header-nav a {
     text-decoration: none;
     color: black;
     padding: 0.5rem 1.25rem;
@@ -27,7 +27,7 @@
     transition: 0.2s ease-in-out;
 }
 
-.header-controls .main-nav .nav-item a:hover {
+.header-nav a:hover {
     background-color: var(--clr-light-green);
     border-radius: 0.25rem;
 }
